--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
+/.env
 
 # vercel
 .vercel
@@ -207,7 +207,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 env/
 venv/
